# Manifold_HF

./: .gitignore  Cargo.toml  LICENSE  README.md  environment.yml
data/: benchmarks.SOURCE.md  benchmarks.targets.json  sto-3g.SOURCE.txt  sto-3g.references.txt
examples/: compare_molecules.rs  compare_optimizers.rs  export_orbital_cube.rs  render_molecule.rs  simple_h2.rs
scripts/: compare_h2o_gold_standard.py  generate_benchmarks.py  visualize_orbitals_3d.py
src/: basis.rs  basis_data.rs  lib.rs  linalg.rs  main.rs  manifold.rs  molecule.rs  scf.rs  visualize.rs
tests/: benchmarks.rs
